--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,22 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-restful = "*"
-gunicorn = "*"
-flask-script = "*"
-flask-migrate = "*"
-dnspython = "*"
+alembic = "==1.4.3"
+aniso8601 = "==8.1.0"
+click = "==7.1.2"
+dnspython = "==2.0.0"
+gunicorn = "==20.0.4"
+itsdangerous = "==1.1.0"
+pymongo = "==3.11.2"
+python-dateutil = "==2.8.1"
+python-editor = "==1.0.4"
+pytz = "==2020.5"
+six = "==1.15.0"
+Flask = "==1.1.2"
+Flask-RESTful = "==0.3.8"
+Mako = "==1.1.3"
+MarkupSafe = "==1.1.1"
+Werkzeug = "==1.0.1"
 
 [dev-packages]
 
