--- a/start.sh.example
+++ b/start.sh.example
@@ -1,7 +1,6 @@
-#!/usr/bin/zsh
-
-export MODE="dev"
-export MONGO_USER="<user here>"
-export MONGO_PSWD="<password here>"
+export MODE="dev" #prod 
+export MONGO_USER="{}"
+export MONGO_PSWD="{}"
+export JWT_SECRET_KEY="{}"
 
 python manage.py
